Some fine tuning and documentation